--- a/settings.py.template
+++ b/settings.py.template
@@ -1,6 +1,6 @@
 settings = {
     # Ip of device to ping
-    'ping_device': '192.168.1.42',
+    'ping_devices': ['192.168.1.42'],
     # lifx api token.
     'token': 'insert-token-here',
     # selector to use.
